--- a/src/conf/httpd.conf
+++ b/src/conf/httpd.conf
@@ -1,7 +1,8 @@
-ServerRoot "/Users/jrob/workspace/server/"
-DocumentRoot "/Users/jrob/workspace/server/public_html/"
+ServerRoot "/src/"
+DocumentRoot "public_html/"
 Listen 8096
 LogFile "/Users/jrob/workspace/server/logs/log.txt"
-ScriptAlias /cgi-bin/ "/Users/jrob/workspace/server/public_html/cgi-bin/"
-Alias /ab/ "/Users/jrob/workspace/server/public_html/ab1/ab2/"
-Alias /~traciely/ "/Users/jrob/workspace/server/public_html/"
+ScriptAlias /cgi-bin/ "/public_html/cgi-bin/"
+Alias /ab/ "public_html/ab1/ab2/index.html"
+Alias /~traciely/ "/public_html/"
+DirectoryIndex "public_html/index.html"
