checking is file works as needed now and now checks for htaccess in the same directory

--- a/src/conf/httpd.conf
+++ b/src/conf/httpd.conf
@@ -1,5 +1,5 @@
 ServerRoot "/src/"
-DocumentRoot "/public_html"
+DocumentRoot "public_html"
 Listen 8096
 LogFile "/Users/jrob/workspace/server/logs/log.txt"
 ScriptAlias /cgi-bin/ "/public_html/cgi-bin/"
