--- a/src/conf/httpd.conf
+++ b/src/conf/httpd.conf
@@ -5,4 +5,4 @@ LogFile "/Users/jrob/workspace/server/logs/log.txt"
 ScriptAlias /cgi-bin/ "/public_html/cgi-bin/"
 Alias /ab/ "/public_html/ab1/ab2/index.html/"
 Alias /~traciely/ "/public_html/"
-DirectoryIndex "/index.html"
+DirectoryIndex "index.html"
