--- a/src/conf/httpd.conf
+++ b/src/conf/httpd.conf
@@ -1,8 +1,8 @@
 ServerRoot "/src/"
-DocumentRoot "public_html"
+DocumentRoot "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html"
 Listen 8096
-LogFile "/Users/jrob/workspace/server/logs/log.txt"
-ScriptAlias /cgi-bin/ "/public_html/cgi-bin/"
-Alias /ab/ "/public_html/ab1/ab2/index.html/"
-Alias /~traciely/ "/public_html/"
+LogFile "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/logs/log.txt"
+ScriptAlias /cgi-bin/ "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html/cgi-bin/"
+Alias /ab/ "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html/ab1/ab2/index.html/"
+Alias /~traciely/ "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html/"
 DirectoryIndex "index.html"
