added script response functionality

--- a/src/conf/httpd.conf
+++ b/src/conf/httpd.conf
@@ -1,8 +1,8 @@
 ServerRoot "/src/"
-DocumentRoot "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html"
+DocumentRoot "/Users/tmytrn/web-server-lookin-like-a-snack/src/public_html"
 Listen 8096
-LogFile "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/logs/log.txt"
-ScriptAlias /cgi-bin/ "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html/cgi-bin/"
-Alias /ab/ "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html/ab1/ab2/index.html/"
-Alias /~traciely/ "/Users/niszeto/IdeaProjects/web-server-lookin-like-a-snack/src/public_html/"
+LogFile "/Users/tmytrn/web-server-lookin-like-a-snack/src/logs/log.txt"
+ScriptAlias /cgi-bin/ "/Users/tmytrn/web-server-lookin-like-a-snack/src/public_html/cgi-bin/perl_env"
+Alias /ab/ "/Users/tmytrn/web-server-lookin-like-a-snack/src/public_html/ab1/ab2/index.html"
+Alias /~traciely/ "/Users/tmytrn/web-server-lookin-like-a-snack/src/public_html"
 DirectoryIndex "index.html"
